[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photo-exhibition-crawler"
version = "0.1.0"
description = "Crawler for Korean photo/video/camera exhibitions"
license = { file = "LICENSE" }
classifiers = ["License :: Other/Proprietary License"]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6,<3",
  "httpx>=0.27,<1",
  "selectolax>=0.3.21,<1",
  "tenacity>=8,<9",
  "gspread>=6,<7",
  "google-auth>=2.28,<3",
  "typer>=0.12,<1",
  "python-dateutil>=2.9,<3",
  "argostranslate>=1.9,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "respx>=0.21,<1",
  "freezegun>=1.4,<2",
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
crawler = "crawler.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
markers = [
  "external: tests that hit live external services (excluded by default)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
